Usando nova API para newInstance()